Add the rest of the slides, compress images and other polishing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<script>
 	// storymap_data can be an URL or a Javascript object
-	var storymap_data = 'data.json';
+	var storymap_data = '/data.json';
 
 	// certain settings must be passed within a separate options object
 	var storymap_options = {};
